k8s/overlays/local/patch-imagepullpolicy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepface-backend
  namespace: deepface
spec:
  template:
    spec:
      containers:
        - name: backend
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepface-worker
  namespace: deepface
spec:
  template:
    spec:
      containers:
        - name: worker
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepface-frontend-home
  namespace: deepface
spec:
  template:
    spec:
      containers:
        - name: nginx
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepface-frontend-user
  namespace: deepface
spec:
  template:
    spec:
      containers:
        - name: nginx
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepface-frontend-admin
  namespace: deepface
spec:
  template:
    spec:
      containers:
        - name: nginx
          imagePullPolicy: Never
