k8s/overlays/local/patch-services-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepface-backend
  namespace: deepface
spec:
  type: NodePort
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 31800
---
apiVersion: v1
kind: Service
metadata:
  name: deepface-frontend-home
  namespace: deepface
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
---
apiVersion: v1
kind: Service
metadata:
  name: deepface-frontend-user
  namespace: deepface
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30081
---
apiVersion: v1
kind: Service
metadata:
  name: deepface-frontend-admin
  namespace: deepface
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30082
