k8s/overlays/local/patch-no-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deepface-ingress
  namespace: deepface
$patch: delete
